[gd_scene load_steps=8 format=3 uid="uid://qrod1vm4th82"]

[ext_resource type="PackedScene" uid="uid://dn1fv61dpndg6" path="res://rabbit/rabbit.blend" id="1_q6f4l"]
[ext_resource type="Script" path="res://rabbit/rabbit.gd" id="2_xo52y"]
[ext_resource type="Texture2D" uid="uid://cpcvoiwhio6fo" path="res://rabbit/textures/rabbit_body_albedo.png" id="3_ckcaq"]
[ext_resource type="Texture2D" uid="uid://bvhgvas070gab" path="res://rabbit/textures/rabbit_tail_albedo.png" id="4_5lwgl"]

[sub_resource type="ORMMaterial3D" id="ORMMaterial3D_lmpcg"]
resource_local_to_scene = true
albedo_texture = ExtResource("3_ckcaq")
emission_enabled = true
emission = Color(0.211765, 0.239216, 0.278431, 1)
emission_energy_multiplier = 0.1
rim = 0.59
backlight = Color(0.545098, 0.545098, 0.545098, 1)

[sub_resource type="ORMMaterial3D" id="ORMMaterial3D_fgyje"]
resource_local_to_scene = true
transparency = 1
cull_mode = 2
diffuse_mode = 1
albedo_texture = ExtResource("4_5lwgl")
emission_enabled = true
emission = Color(0.211765, 0.239216, 0.278431, 1)
emission_energy_multiplier = 0.1
billboard_mode = 1
billboard_keep_scale = true

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yfoac"]
radius = 0.4
height = 1.0

[node name="Rabbit" type="CharacterBody3D" node_paths=PackedStringArray("_rabbit_body", "_rabbit_tail")]
process_mode = 1
collision_layer = 3
script = ExtResource("2_xo52y")
_near_target_threshold = 0.5
_walk_speed = 5.0
_wander_dist_min = 10.0
_wander_dist_max = 20.0
_rabbit_body = NodePath("RabbitModel/RabbitBody")
_rabbit_tail = NodePath("RabbitModel/RabbitTail")

[node name="RabbitModel" parent="." instance=ExtResource("1_q6f4l")]

[node name="RabbitBody" parent="RabbitModel" index="0"]
surface_material_override/0 = SubResource("ORMMaterial3D_lmpcg")

[node name="RabbitTail" parent="RabbitModel" index="1"]
surface_material_override/0 = SubResource("ORMMaterial3D_fgyje")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_yfoac")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
unique_name_in_owner = true
avoidance_enabled = true
radius = 0.4
debug_enabled = true
debug_path_custom_color = Color(1, 1, 0, 1)

[node name="Label3Ds" type="Node3D" parent="."]

[node name="AiStateLabel" type="Label3D" parent="Label3Ds"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.08296, 0)
billboard = 2
text = "STATE"

[node name="HorzSpeedLabel" type="Label3D" parent="Label3Ds"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.91336, 0)
text = "m/s"

[node name="TargetPosLabel" type="Label3D" parent="Label3Ds"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7391, 0)
text = "TargetPos: "

[node name="CurrentPosLabel" type="Label3D" parent="Label3Ds"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.57283, 0)
text = "CurrentPos: "

[node name="DistToTargLabel" type="Label3D" parent="Label3Ds"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.42853, 0)
text = "DistToTarg: "

[editable path="RabbitModel"]
